[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 8 )

[node name="Bullet" type="Area2D"]
rotation = 1.5708
script = ExtResource( 2 )
speed = 10

[node name="Sprite" type="Sprite" parent="."]
region_enabled = true
region_rect = Rect2( 198, 46, 4, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
